Add SSL support